// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserTaskDataTableContainer component tests Should render UserTaskDataTableContainer correctly 1`] = `
<UserTaskDataTableContainer>
  <div
    data-ouia-component-type="UserTaskDataTableContainer"
    data-ouia-safe={true}
  >
    <MockUserTaskPageHeader />
    <PageSection>
      <section
        className="pf-c-page__main-section"
      >
        <Grid
          hasGutter={true}
          md={1}
        >
          <div
            className="pf-l-grid pf-m-all-1-col-on-md pf-m-gutter"
          >
            <GridItem
              span={12}
            >
              <div
                className="pf-l-grid__item pf-m-12-col"
              >
                <Card
                  className="kogito-task-console--user-task_table-OverFlow"
                >
                  <article
                    className="pf-c-card kogito-task-console--user-task_table-OverFlow"
                    data-ouia-component-id={0}
                    data-ouia-component-type="PF4/Card"
                    data-ouia-safe={true}
                  >
                    <DataTable
                      LoadingComponent={
                        <Bullseye>
                          <KogitoSpinner
                            spinnerText="Loading user tasks..."
                          />
                        </Bullseye>
                      }
                      columns={
                        Array [
                          Object {
                            "label": "ProcessId",
                            "path": "$.processId",
                          },
                          Object {
                            "isSortable": true,
                            "label": "Name",
                            "path": "$.name",
                          },
                          Object {
                            "label": "Priority",
                            "path": "$.priority",
                          },
                          Object {
                            "label": "ProcessInstanceId",
                            "path": "$.processInstanceId",
                          },
                          Object {
                            "bodyCellTransformer": [Function],
                            "isSortable": true,
                            "label": "State",
                            "path": "$.state",
                          },
                        ]
                      }
                      data={
                        Array [
                          Object {
                            "__typename": "UserTaskInstance",
                            "actualOwner": null,
                            "adminGroups": Array [],
                            "adminUsers": Array [],
                            "completed": null,
                            "description": "",
                            "endpoint": "http://localhost:8080/travels/9ae407dd-cdfa-4722-8a49-0a6d2e14550d/VisaApplication/9ae407dd-cdfa-4722-8a49-0a6d2e14550d",
                            "excludedUsers": Array [],
                            "id": "047ec38d-5d57-4330-8c8d-9bd67b53a529",
                            "inputs": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2019-12-09T23:00:00.000+01:00\\",\\"arrival\\":\\"2019-12-14T23:00:00.000+01:00\\"},\\"TaskName\\":\\"ConfirmTravel\\",\\"NodeName\\":\\"Confirm travel\\",\\"Priority\\":\\"1\\",\\"Skippable\\":\\"true\\",\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"New York\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"US\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null}}",
                            "name": "Confirm travel",
                            "outputs": "{\\"ActorId\\":\\"\\"}",
                            "potentialGroups": Array [],
                            "potentialUsers": Array [],
                            "priority": "1",
                            "processId": "travels",
                            "processInstanceId": "9ae407dd-cdfa-4722-8a49-0a6d2e14550d",
                            "referenceName": "ConfirmTravel",
                            "rootProcessId": null,
                            "rootProcessInstanceId": null,
                            "started": "2020-02-19T10:59:34.185Z",
                            "state": "Ready",
                          },
                          Object {
                            "__typename": "UserTaskInstance",
                            "actualOwner": null,
                            "adminGroups": Array [],
                            "adminUsers": Array [],
                            "completed": null,
                            "description": null,
                            "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                            "excludedUsers": Array [],
                            "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                            "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}\\"",
                            "name": "Apply for visa",
                            "outputs": "{}",
                            "potentialGroups": Array [],
                            "potentialUsers": Array [],
                            "priority": "1",
                            "processId": "travels",
                            "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                            "referenceName": "VisaApplication",
                            "rootProcessId": null,
                            "rootProcessInstanceId": null,
                            "started": "2020-02-19T11:11:56.282Z",
                            "state": null,
                          },
                        ]
                      }
                      isLoading={false}
                      networkStatus={1}
                      onSorting={[Function]}
                      refetch={[MockFunction]}
                      sortBy={Object {}}
                    >
                      <MockedComponent />
                    </DataTable>
                  </article>
                </Card>
              </div>
            </GridItem>
          </div>
        </Grid>
      </section>
    </PageSection>
  </div>
</UserTaskDataTableContainer>
`;

exports[`UserTaskDataTableContainer component tests Should render UserTaskDataTableContainer with no data 1`] = `
<UserTaskDataTableContainer>
  <div
    data-ouia-component-type="UserTaskDataTableContainer"
    data-ouia-safe={true}
  >
    <MockUserTaskPageHeader />
    <PageSection>
      <section
        className="pf-c-page__main-section"
      >
        <Grid
          hasGutter={true}
          md={1}
        >
          <div
            className="pf-l-grid pf-m-all-1-col-on-md pf-m-gutter"
          >
            <GridItem
              span={12}
            >
              <div
                className="pf-l-grid__item pf-m-12-col"
              >
                <Card
                  className="kogito-task-console--user-task_table-OverFlow"
                >
                  <article
                    className="pf-c-card kogito-task-console--user-task_table-OverFlow"
                    data-ouia-component-id={1}
                    data-ouia-component-type="PF4/Card"
                    data-ouia-safe={true}
                  >
                    <DataTable
                      LoadingComponent={
                        <Bullseye>
                          <KogitoSpinner
                            spinnerText="Loading user tasks..."
                          />
                        </Bullseye>
                      }
                      columns={
                        Array [
                          Object {
                            "label": "ProcessId",
                            "path": "$.processId",
                          },
                          Object {
                            "isSortable": true,
                            "label": "Name",
                            "path": "$.name",
                          },
                          Object {
                            "label": "Priority",
                            "path": "$.priority",
                          },
                          Object {
                            "label": "ProcessInstanceId",
                            "path": "$.processInstanceId",
                          },
                          Object {
                            "bodyCellTransformer": [Function],
                            "isSortable": true,
                            "label": "State",
                            "path": "$.state",
                          },
                        ]
                      }
                      isLoading={false}
                      networkStatus={1}
                      onSorting={[Function]}
                      refetch={[MockFunction]}
                      sortBy={Object {}}
                    >
                      <MockedComponent />
                    </DataTable>
                  </article>
                </Card>
              </div>
            </GridItem>
          </div>
        </Grid>
      </section>
    </PageSection>
  </div>
</UserTaskDataTableContainer>
`;
